# Gaokao

./:  .dockerignore  Dockerfile  README.md  prefect.yaml  pyproject.toml  start.py
config/: configs.py
lib/: base_requests.py  header.py  logger.py  mongo_pool.py  province_info.py  proxies_pool.py
src/: school_info.py  school_special_score.py  test.py
