[project]
name = "gaokao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.12.0",
    "drissionpage>=4.1.1.2",
    "loguru>=0.7.3",
    "prefect>=3.4.10",
    "pymongo>=4.13.2",
    "requests>=2.32.4",
    "tenacity>=9.1.2",
]
